# Verve

./: .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  README.md  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: snapshot.yml
docs/: CONTRIBUTING.md  themes.md
docs/themes/theme-blue/: theme.json
docs/themes/theme-default/: theme.json
docs/themes/theme-green/: theme.json
src/: cache.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ns_panel.rs  util.rs
src-tauri/src/util/: calculator.rs  icons.rs  preferences.rs  search.rs
src/routes/App/: App.svelte
src/routes/App/lib/: CalculationResult.svelte  FileSearchResult.svelte  Footer.svelte  SearchBar.svelte  SearchResult.svelte
src/routes/Settings/: Settings.svelte
src/routes/Settings/lib/: CheckBox.svelte  MenuButton.svelte
src/routes/Settings/lib/controls/: MenuBarIconControl.svelte  ShortcutControl.svelte  StartAtLoginControl.svelte
src/utils/: icon.ts  path.ts
