[package]
name = "verve"
version = "0.2.0"
description = "Verve is a lightweight and blazingly fast launcher for accessing and opening applications, files and documents."
authors = ["jadhavparth99@gmail.com"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
repository = "https://github.com/ParthJadhav/verve"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-read-dir", "fs-read-file", "fs-write-file", "global-shortcut-all", "macos-private-api", "path-all", "protocol-asset", "system-tray", "window-center", "window-hide", "window-set-focus", "window-set-size", "window-set-skip-taskbar", "window-show"] }
rust_search = "2.1.0"
directories = "4.0.1"
plist = "1"
strsim = "0.10.0"
auto-launch = "0.4.0"
window-vibrancy = "0.3.2"
smartcalc = { git = "https://github.com/ParthJadhav/smartcalc", branch = "stable" }
chrono-tz = { version = "0.6.1", default-features = false }
num-format = { version = "0.4", features = ["with-system-locale"] }
localzone = "0.2.0"

[dependencies.chrono]
version = "0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
